--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
             <button 
                 type="submit" 
                 class="w-full bg-cyan-500 hover:bg-cyan-400 text-white font-bold py-3 rounded-xl shadow-lg transform transition active:scale-95 uppercase tracking-wider"
-            >
+                id="btn"
+                >
                 Search Weather
             </button>
         </form>
